Login funktion skrevet i front-end dog udkommenteret og en lille ændring i index.html og Style.css

--- a/src/main/Webapp/Style.css
+++ b/src/main/Webapp/Style.css
@@ -23,6 +23,11 @@ body {
     width: 175px;
     padding: 100px;
 }
+.forgot{
+    cursor: pointer;
+    font-size: small;
+    padding-bottom: 2%;
+            }
 .Login_butt{
 
 }
