--- a/src/main/Webapp/Style.css
+++ b/src/main/Webapp/Style.css
@@ -4,6 +4,7 @@
     font-family: sans-serif;
 
 }
+
 body {
     background-color: azure;
     color: white;
@@ -34,3 +35,5 @@ body {
 .sidebar{
     padding: 14px 60px;
 }
+h1 {
+    text-align: center;}
